syntax = "proto3";

message IMUMessage {
  float accel_x = 1;
  float accel_y = 2;
  float accel_z = 3;
  float orient_w = 4;
  float orient_i = 5;
  float orient_j = 6;
  float orient_k = 7;
}
